--- a/templates/food.html
+++ b/templates/food.html
@@ -15,11 +15,11 @@
         <div class="info-icon" onclick="showInfo()">i</div>
         <div style="border-radius: 20px;" class="info-tooltip" id="infoTooltip">
             <span style="color: rgba(255, 255, 255, 0.562); ">
-                Bulk: <i class="bx bx-arrow-up"></i> 250-500kcal
+                Bulk: <i class="bx bx-arrow-up"></i>add 250-500kcal
             </span>
             <br>
             <span style="color: rgba(255, 255, 255, 0.562);">
-                Cut: <i class="bx bx-arrow-down"></i> 500kcal
+                Cut: <i class="bx bx-arrow-down"></i>cut 500kcal
             </span>
         </div>
     </div>
