--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}" />
 <div class="get-started slide-in">
   <h2>Click To Get Started</h2>
 </div>
