--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,10 @@
       href="https://unpkg.com/boxicons/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="manifest"
+      href="{{ url_for('static', filename='manifest.json') }}"
+    />
     <style>
       body {
         margin: 0;
@@ -92,7 +96,7 @@
             href="{{ url_for('index') }}"
             style="text-decoration: none; color: #ffffff"
           >
-            FitFusion
+            myFitF
           </a>
         </h1>
       </div>
